# whisplay_chatbot

./: .env.template  .gitignore  README.md  app.js  build.sh  demo.js  display.js  display.py  doubao-llm.js  install.sh  install_dependencies.sh  lcd.py  openai-demo.js  package.json  pyproject.toml  requirements.txt  restart_chatbot.sh  run.sh  run_chatbot.sh  scroll.py  st7789.py  startup.sh  tencent-cloud.js  volcengine-asr.js  volcengine-tts.js
cloud-api/: doubao-llm.js  openai-asr.js  openai-llm.js  openai-tts.js  server.js  tencent-cloud.js  volcengine-asr.js  volcengine-llm.js  volcengine-tts-ws.js  volcengine-tts.js
common/: rgb565_common.js
config/: llm-config.js
core/: ChatFlow.js
device/: audio.js  battery.js  button.js  display.js  led.js  pin-convert.js
patches/: @google+genai+1.25.0.patch
python/: chatbot-ui.py  echoview.py  requirements.txt  scroll.py  socket-test.py  test.py  utils.py  whisplay.py
src/: index.ts
src/cloud-api/: gemini-asr.ts  gemini-llm.ts  gemini-tts.ts  gemini.ts  ollama-llm.ts  openai-asr.ts  openai-llm.ts  openai-tts.ts  openai.ts  proxy-fetch.ts  server.ts  tencent-cloud.ts  type.d.ts  volcengine-llm.ts  volcengine-tts-ws.ts  volcengine-tts.ts
src/config/: llm-config.ts  llm-tools.ts
src/core/: ChatFlow.ts
src/device/: audio.ts  display.ts
src/type/: index.ts
src/utils/: index.ts  volume.ts
test/: openai-demo.js  openai-llm-demo.js
tests/: test_config.py  test_persona.py
utils/: index.js
whisplay_chatbot/: __init__.py  __main__.py  app.py  cli.py  config.py  logging_utils.py  main.py  ui_utils.py
(+18 files in other folders)
